--- a/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/_ViewImports.cshtml
@@ -10,5 +10,6 @@
 @using NetCoreCMS.Framework.i18n
 @using NetCoreCMS.Framework.Core.Mvc.Views
 
+@addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject NccLanguageDetector LanguageDetector
