--- a/NetCoreCMS.Web/Modules/NetCoreCMS.News/Views/NeNews/Details.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.News/Views/NeNews/Details.cshtml
@@ -5,8 +5,8 @@
 
 @{
     Layout = Constants.SiteLayoutName;
-    ViewData["PageTitle"] = Model.Name;
-    ViewData["PageSubtitle"] = "";
+    Title = Model.Name;
+    SubTitle = "";    
 }
 
 <div>
