--- a/NetCoreCMS.Web/Modules/NetCoreCMS.News/Views/NeNews/Index.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.News/Views/NeNews/Index.cshtml
@@ -5,8 +5,10 @@
 
 @{
     Layout = Constants.SiteLayoutName;
-    ViewData["PageTitle"] = "News";
-    ViewData["PageSubtitle"] = "";
+    Title = "News";
+    SubTitle = "";
+    MetaDescription = "News of the website";
+    MetaKeyword = "News, breaking news, information, current news";
 }
     
 <div class="row">
