--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_FullWidthSlider.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_FullWidthSlider.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    NccTranslator<ThemeResources> _TT = new NccTranslator<ThemeResources>(CurrentLanguage);
-}
-<!-- Full Width Slider Start -->
+﻿<!-- Full Width Slider Start -->
 <div>
     @{
         var fullWidthSlider = ThemeHelper.GetWebsiteWidgets(CurrentLayout, "FullWidthSlider");
