--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
-﻿@using Microsoft.Extensions.Localization
+﻿@inherits NccRazorPage<TModel>
+
+@using NetCoreCMS.Framework.Themes
+@using Microsoft.Extensions.Localization
 @using Microsoft.AspNetCore.Identity
 @using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Framework.Utility
@@ -7,8 +10,6 @@
 @using NetCoreCMS.Framework.Core.Mvc.Views
 
 @using NetCoreCMS.Framework.i18n
-
-@inject IStringLocalizer _T
 
 @addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
