--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/_ViewImports.cshtml
@@ -12,4 +12,5 @@
 @using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Framework.Core.Mvc.Views
 
+@addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
