--- a/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/_ViewImports.cshtml
@@ -8,6 +8,7 @@
 @using NetCoreCMS.Framework.i18n
 @using NetCoreCMS.Framework.Core.Mvc.Views
 
+@addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @inject NccLanguageDetector LanguageDetector
