--- a/NetCoreCMS.Web/Modules/NetCoreCMS.News/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.News/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Framework.Core.Mvc.Views
 
+@addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
