--- a/NetCoreCMS.Web/Modules/NetCoreCMS.Subscription/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.Subscription/Views/_ViewImports.cshtml
@@ -8,4 +8,5 @@
 @using NetCoreCMS.Framework.i18n
 @using NetCoreCMS.Framework.Core.Mvc.Views
 
+@addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
