--- a/NetCoreCMS.Web/Themes/NccSeventeen/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
-﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+﻿@inherits NccRazorPage<TModel>
 
+@using NetCoreCMS.Framework.Themes
 @using NetCoreCMS.Framework.Core
 @using Microsoft.AspNetCore.Identity
 @using NetCoreCMS.Framework.Utility
@@ -16,6 +17,7 @@
 @addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 @inject SignInManager<NccUser> SignInManager
 @inject UserManager<NccUser> UserManager
 @inject NccLanguageDetector LanguageDetector
