--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Logging.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Logging.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-sm-12">
-        <form id="logForm" class="form-horizontal" asp-controller="Admin" asp-action="Logging" method="post">
+        <form id="logForm" class="form-horizontal" asp-controller="Admin" asp-action="DownloadLogFile" method="get">
             <input type="hidden" id="operation" name="operation"/>
             <div class="form-group">
                 <div class="row">
@@ -58,6 +58,7 @@
 <script>
     function SubmitForm() {
         $("#operation").val("SetLog");
-        $("#logForm").submit();
+        $("#logForm").attr("action", "SetLogLevel");
+        $("#logForm").submit();        
     }
 </script>
