changed language system into single file.

--- a/NetCoreCMS.Web/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
-﻿@using NetCoreCMS.Framework.Core
+﻿@inherits NccRazorPage<TModel>
+
+@using NetCoreCMS.Framework.Themes
+@using NetCoreCMS.Framework.Core
 @using NetCoreCMS.Framework.Utility
 @using Microsoft.AspNetCore.Identity
 @using NetCoreCMS.Framework.Core.Models
