Implementing Advanced Data authorization in asp.net core 2.0

--- a/NetCoreCMS.Web/Views/Home/NotAuthorized.cshtml
+++ b/NetCoreCMS.Web/Views/Home/NotAuthorized.cshtml
@@ -1,7 +1,7 @@
 ﻿ 
 @{ 
     ViewData["Title"] = "Not authorized";
-    Layout = "_SiteLayout";
+    Layout = "_SimpleLayout";
 }
 <style>
     #container {
