working on built in dynamic authorization. Advance permission module has been removed.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/UserAuth/Templates.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/UserAuth/Templates.cshtml
@@ -2,6 +2,7 @@
 @{ 
     ViewData["Title"] = "Permission Templates";
     ViewData["PageTitle"] = "Create Permission Template.";
+    Layout = Constants.AdminLayoutName;
 }
 
 <h2></h2>
