--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Comments/Manage.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Comments/Manage.cshtml
@@ -31,15 +31,12 @@
                 <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                         <tr>
-                            <th>Title</th>
-                            @*<th>Slug</th>*@
-                            <th>Parent</th>
-                            <th>Meta Keyword</th>
-                            <th>Meta Description</th>
+                            <th>Post</th>
+                            <th>Comments</th>
                             <th>Author</th>
                             <th>Status</th>
-                            <th>Layout</th>
-                            <th>Visibility</th>
+                            <th>CreateBy</th>
+                            <th>Last Update</th>
                             <th>Action</th>
                         </tr>
                     </thead>
@@ -47,47 +44,25 @@
                         @foreach (var item in Model)
                         {
                             <tr>
-                                <td>
-                                   
-                                </td>
-                                @*<td>
-                                    @if (GlobalConfig.WebSite.IsMultiLangual == true || item.PostDetails.Where(x => x.Language == GlobalConfig.WebSite.Language).Count() <= 0)
-                                    {
-                                        for (var i = 0; i < item.PostDetails.Count; i++)
-                                        {
-                                            if (i > 0)
-                                            {
-                                                <hr />
-                                            }
-                                            <span>@item.PostDetails[i].Language: </span><span>@item.PostDetails[i].Slug</span>
-                                        }
-                                    }
-                                    else
-                                    {
-                                        <span>@item.PostDetails.Where(x => x.Language == GlobalConfig.WebSite.Language).FirstOrDefault().Slug </span>
-                                    }
-                                </td>*@
                                 <td style="text-align:center;">
-                                    
+                                   @item.Post.Name
                                 </td>
-                                <td>
-                                    
+                                <td style="text-align:center;">
+                                    @item.Content
                                 </td>
-                                <td>
-                                    
+                                <td style="text-align:center;">
+                                    @item.AuthorName
+                                </td>
+                                <td style="text-align:center;">
+                                    @item.CommentStatus
                                 </td>
                                 <td style="text-align:center;">@item.CreateBy</td>
                                 <td>
-                                    
-                                    <br />
-                                    Last Update: [@item.ModificationDate.ToString("MMM dd, yyyy hh:mm tt")]
+                                    @item.ModificationDate.ToString("MMM dd, yyyy hh:mm tt")
                                 </td>
-                                <td style="text-align:center;"></td>
-                                <td style="text-align:center;"></td>
                                 <td style="text-align:center;">
                                     <a asp-controller="@controllerName" asp-action="CreateEdit" asp-route-id="@item.Id" class="btn btn-outline btn-success btn-xs">Edit</a>
-                                    <a asp-controller="@controllerName" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline btn-danger btn-xs">Delete</a>
-                                    
+                                    <a asp-controller="@controllerName" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline btn-danger btn-xs">Delete</a>                                    
                                 </td>
                             </tr>
                         }
