corking on comments

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Comments/Manage.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Comments/Manage.cshtml
@@ -45,7 +45,7 @@
                         {
                             <tr>
                                 <td style="text-align:center;">
-                                   @item.Post.Name
+                                   @item.Post?.Name
                                 </td>
                                 <td style="text-align:center;">
                                     @item.Content
