--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Comments/CreateEdit.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Comments/CreateEdit.cshtml
@@ -51,9 +51,10 @@
                             <div class="form-group">
                                 <label class="col-md-3 text-right">Post </label>
                                 <div class="col-md-9">
-                                    <select class="form-control" asp-for="Post" name="PostId" asp-items="@ViewBag.AllPosts">
+                                    @Model.Post?.Name
+                                    @*<select class="form-control" asp-for="Post" name="PostId" asp-items="@ViewBag.AllPosts">
                                         <option value="0">Select Post</option>
-                                    </select>
+                                    </select>*@
                                 </div>
                             </div>
                             @*<div class="form-group">
