changed the mapping.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/_ViewImports.cshtml
@@ -8,6 +8,8 @@
 @using NetCoreCMS.Framework.Core
 @using NetCoreCMS.Framework.Core.Mvc.Views.TagHelpers
 @using NetCoreCMS.Framework.Core.Mvc.Views
+@using NetCoreCMS.Framework.Core.Mvc.Attributes
+
 
 @using NetCoreCMS.Framework.i18n
 
