--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewImports.cshtml
@@ -17,6 +17,7 @@
 @using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Framework.Core.Mvc.Views
+@using NetCoreCMS.Framework.Core.Mvc.Attributes
 @using NetCoreCMS.Framework.i18n
 @using NetCoreCMS.Framework.Core.Mvc.Views.TagHelpers
 @using NetCoreCMS.Modules.Cms.Models.ViewModels;
